Add snapping feature
use ALT to not snap. also, added cap on y position to 100 reverse for that col

--- a/all.html
+++ b/all.html
@@ -18,6 +18,8 @@
     Cross: <span id="spanCross">0.0</span>
     Alternate: <span id="spanAlternate">0.0</span>
     Reverse: <span id="spanReverse">0.0</span>
+	<p>
+	Snapping: <span id="spanSnapping">ON</span>
   </div>
 </body>
 
@@ -56,6 +58,9 @@
   let dragging = -1;
   let grabX = 0;
   let grabY = 0;
+  
+  let snappingX = 32;
+  let snappingY = 32;
 
   let nf = new Intl.NumberFormat( { style: "percent" } ).format;
 
@@ -91,8 +96,19 @@
 
   document.addEventListener( "mousemove", event => {
     if ( dragging !== -1 ) {
-      xs[ dragging ] = event.clientX - grabX;
-      ys[ dragging ] = event.clientY - grabY;
+	
+	  if ( snappingX > 0 ) {
+        xs[ dragging ] = Math.floor((event.clientX - grabX)/snappingX)*snappingX;
+	  } else {
+        xs[ dragging ] = event.clientX - grabX;
+	  }
+	  
+	  if ( snappingY > 0 ) {
+        ys[ dragging ] = Math.min(Math.floor((event.clientY - grabY)/snappingY)*snappingY + 19, 256+83);
+	  } else {
+        ys[ dragging ] = Math.min(event.clientY - grabY, 256+83);
+	  }
+	  
 	  SplitCrossAlt(
 		( -(ys[0]-83) - (ys[1]-83) + (ys[2]-83) + (ys[3]-83) ) / 512,
 		( -(ys[0]-83) + (ys[1]-83) + (ys[2]-83) - (ys[3]-83) ) / 512,
@@ -117,6 +133,24 @@
 
   document.addEventListener( "mouseup", event => {
     dragging = -1;
+  } );
+  
+  document.addEventListener( "keydown", (event) => {
+	event.preventDefault();
+	if( event.altKey ){
+	  snappingX = 0;
+	  snappingY = 0;
+	  spanSnapping.innerText = "OFF";
+	}
+  } );
+  
+  document.addEventListener( "keyup", (event) => {
+	event.preventDefault();
+	if( !event.altKey ){
+	  snappingX = 32;
+	  snappingY = 32;
+	  spanSnapping.innerText = "ON";
+	}
   } );
 
   let update = () => {
