--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <div class="receptor" id="right"></div>
   </div>
   <div id="text">
-    Flip: <span id="spanFlip">0.0</span>
-    Invert: <span id="spanInvert">0.0</span>
+	Flip: <span id="spanFlip">0.0</span>
+	Invert: <span id="spanInvert">0.0</span>
+	<p>
+	Snapping: <span id="spanSnapping">ON</span>
   </div>
 </body>
 
@@ -50,6 +52,8 @@
   let dragging = -1;
   let grabX = 0;
   let grabY = 0;
+  
+  let snappingX = 32;
 
   let nf = new Intl.NumberFormat( { style: "percent" } ).format;
 
@@ -76,9 +80,14 @@
     if ( dragging !== -1 ) {
       console.log( dragging );
       console.log( event.clientX - grabX );
-
-      xs[ dragging ] = event.clientX - grabX;
-      if ( dragging === 0 || dragging === 1 ) {
+	  
+      if ( snappingX > 0 ) {
+        xs[ dragging ] = Math.floor((event.clientX - grabX)/snappingX)*snappingX;
+	  } else {
+        xs[ dragging ] = event.clientX - grabX;
+	  }
+      
+	  if ( dragging === 0 || dragging === 1 ) {
         flipInvert(
           ( xs[ 0 ] + xs[ 1 ] - 448 ) / 256,
           ( xs[ 0 ] - 3 * xs[ 1 ] + 576 ) / 256
@@ -89,11 +98,28 @@
           ( 3 * xs[ 2 ] - xs[ 3 ] - 576 ) / 256
         );
       }
+	  
     }
   } );
 
   document.addEventListener( "mouseup", event => {
     dragging = -1;
+  } );
+  
+  document.addEventListener( "keydown", (event) => {
+	event.preventDefault();
+	if( event.altKey ){
+	  snappingX = 0;
+	  spanSnapping.innerText = "OFF";
+	}
+  } );
+  
+  document.addEventListener( "keyup", (event) => {
+	event.preventDefault();
+	if( !event.altKey ){
+	  snappingX = 32;
+	  spanSnapping.innerText = "ON";
+	}
   } );
 
   let update = () => {
